@@ -5,7 +5,10 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 
 @Getter
 @Setter
@@ -18,7 +21,7 @@ public class Author {
     private String surname;
     private String authorInfo;
 
-    public static List<Author> authorList = List.of(
+    public static List<Author> authorList = new ArrayList<>(Arrays.asList(
             new Author(1, "William", "Shakespeare", "English playwright, poet, and actor, widely regarded as the greatest writer in the English language."),
             new Author(2, "Jane", "Austen", "English novelist known primarily for her six major novels, which interpret, critique and comment upon the British landed gentry at the end of the 18th century."),
             new Author(3, "Charles", "Dickens", "English writer and social critic. He created some of the world's best-known fictional characters and is regarded by many as the greatest novelist of the Victorian era."),
@@ -29,7 +32,18 @@ public class Author {
             new Author(8, "C.S.", "Lewis", "British writer and lay theologian. He held academic positions in English literature at both Oxford University and Cambridge University and is best known for his works of fiction, especially The Screwtape Letters, The Chronicles of Narnia, and The Space Trilogy."),
             new Author(9, "Mary", "Shelley", "English novelist who wrote the Gothic novel Frankenstein; or, The Modern Prometheus, which is considered an early example of science fiction."),
             new Author(10, "Arthur", "Conan Doyle", "British writer and physician, best known for his creation of the detective Sherlock Holmes, generally considered a milestone in the field of crime fiction.")
-    );
+    ));
 
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+        Author author = (Author) o;
+        return id == author.id;
+    }
 
+    @Override
+    public int hashCode() {
+        return Objects.hashCode(id);
+    }
 }
